--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "mini-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
+    "build": "npm install && npm run devStart -e js,ejs",
+    "rebuild": "npm run clean && npm run build",
+    "clean": "rm -rf node_modules"
   },
   "author": "Rohit Joshi",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
