--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "eslinter": "^3.1.0",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "v16.17.0"
   }
 }
