--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mini-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "node server.js",
     "devStart": "nodemon server.js",
     "build": "npm install && npm run devStart -e js,ejs",
@@ -14,15 +14,25 @@
   "author": "Rohit Joshi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "mongoose": "^8.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.5",
     "eslinter": "^3.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "engines": {
