--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devTest": "jest --watchAll --coverage",
     "start": "node server.js",
     "devStart": "nodemon server.js",
+    "devStart2": "npm run devStart -e js,ejs",
     "build": "npm install && npm run devStart -e js,ejs",
     "rebuild": "npm run clean && npm run build",
     "clean": "rm -rf node_modules"
@@ -34,8 +35,8 @@
     "@babel/preset-env": "^7.23.5",
     "eslinter": "^3.1.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": "v16.17.0"
