--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv-expand": "^10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^8.0.3",
